--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
 node_modules
 build
-build/
-/build
-/src/scss/blocks/_output.scss
-src/scss/blocks/_output.scss
-build/css/main.css
-_output.scss
+/_output.scss
